# Ultralytics-YOLO-API

./: .gitignore  README.md  config.ini.example  openapi.yaml  pyproject.toml  req.txt  run.sh  start.sh
src/: main.py
src/api/: api.py
src/api/v1/: __init__.py  detect.py  detectImage.py  models.py
src/models/: detect.py  models.py
src/models/yolo11/: detect.py
src/utils/: __init__.py  configManager.py  converter.py  modelManager.py
